# sutra

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  HANDOFF.md  README.md  REPAIR_ENGINES.md  WHITEPAPER.md  competitor-research.json  railway.json
.github/workflows/: audit.yml  pages.yml
crates/mgtg/: .mgtgignore  Cargo.toml
crates/mgtg/src/: config.rs  findings.rs  ir.rs  lib.rs  output.rs  scanner.rs
crates/mgtg/src/analysis/: complexity.rs  computation.rs  gaps.rs  memory.rs  mod.rs
crates/mgtg/src/graph/: cfg.rs  dataflow.rs  fsm.rs  mod.rs  refgraph.rs
crates/mgtg/src/parser/: javascript.rs  mod.rs  python.rs  rust.rs
crates/sutra-ci/: Cargo.toml
crates/sutra-ci/src/: comment.rs  lib.rs  sarif.rs
crates/sutra-cli/: Cargo.toml
crates/sutra-cli/src/: main.rs
crates/sutra-common/: Cargo.toml
crates/sutra-common/src/: config.rs  engine.rs  error.rs  fs.rs  health.rs  lib.rs  metrics.rs  tracing.rs
crates/sutra-dependency/: Cargo.toml
crates/sutra-dependency/src/: architecture.rs  engine.rs  graph.rs  lib.rs  output.rs  persist.rs  types.rs
crates/sutra-dependency/src/extractor/: golang.rs  java.rs  javascript.rs  mod.rs  python.rs
crates/sutra-hitl/: Cargo.toml
crates/sutra-hitl/src/: analyzer.rs  engine.rs  lib.rs  store.rs  types.rs
crates/sutra-llm/: Cargo.toml
crates/sutra-llm/src/: client.rs  engine.rs  lib.rs  pipeline.rs  types.rs
crates/sutra-mgtg/: Cargo.toml
crates/sutra-mgtg/src/: engine.rs  lib.rs
crates/sutra-ml/: Cargo.toml
crates/sutra-ml/proptest-regressions/: model.txt
crates/sutra-ml/src/: engine.rs  eval.rs  lib.rs  model.rs  persist.rs  types.rs
crates/sutra-orchestrator/: Cargo.toml
crates/sutra-orchestrator/src/: coordinator.rs  openapi.json  report.html  server.rs
crates/sutra-orchestrator/tests/: e2e.rs
crates/sutra-process/: Cargo.toml
crates/sutra-process/src/: cochange.rs  engine.rs  entropy.rs  gitwalk.rs  jitfeatures.rs  lib.rs  output.rs  persist.rs  types.rs
crates/sutra-repair-coupling/: Cargo.toml
crates/sutra-repair-coupling/src/: engine.rs  types.rs
crates/sutra-repair-debt-roi/: Cargo.toml
crates/sutra-repair-debt-roi/src/: engine.rs  types.rs
crates/sutra-repair-performance/: Cargo.toml
crates/sutra-repair-performance/src/: engine.rs  types.rs
crates/sutra-repair-refactoring/: Cargo.toml
crates/sutra-repair-refactoring/src/: engine.rs  types.rs
crates/sutra-repair-refactoring/tests/: e2e_test.rs  spec_data_test.rs
crates/sutra-repair-testing-gap/: Cargo.toml
crates/sutra-repair-testing-gap/src/: engine.rs  types.rs
crates/sutra-rse/: Cargo.toml
crates/sutra-rse/src/: complexity.rs  engine.rs  lib.rs  queueing.rs  runtime.rs  scoring.rs  types.rs  weight.rs
crates/sutra-schema/: Cargo.toml
crates/sutra-schema/src/: v1.rs
docs/: book.md  example.py
website/: book.html  demo.js  example.html  index.html  live-demo.js  style.css
