[workspace]
resolver = "2"
members = [
    "crates/mgtg",
    "crates/sutra-schema",
    "crates/sutra-common",
    "crates/sutra-mgtg",
    "crates/sutra-dependency",
    "crates/sutra-process",
    "crates/sutra-ci",
    "crates/sutra-orchestrator",
    "crates/sutra-cli",
    "crates/sutra-ml",
    "crates/sutra-llm",
    "crates/sutra-hitl",
    "crates/sutra-rse",
    "crates/sutra-repair-refactoring",
    "crates/sutra-repair-coupling",
    "crates/sutra-repair-performance",
    "crates/sutra-repair-testing-gap",
    "crates/sutra-repair-debt-roi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = { version = "0.13", features = ["process"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.7"
rusqlite = { version = "0.34", features = ["bundled"] }
regex = "1"
walkdir = "2"
git2 = "0.19"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
ureq = { version = "3", features = ["json"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
proptest = "1"
rayon = "1"

# Internal workspace crates
sutra-schema = { path = "crates/sutra-schema" }
sutra-common = { path = "crates/sutra-common" }
sutra-mgtg = { path = "crates/sutra-mgtg" }
sutra-dependency = { path = "crates/sutra-dependency" }
sutra-process = { path = "crates/sutra-process" }
sutra-ml = { path = "crates/sutra-ml" }
sutra-orchestrator = { path = "crates/sutra-orchestrator" }
sutra-ci = { path = "crates/sutra-ci" }
sutra-llm = { path = "crates/sutra-llm" }
sutra-hitl = { path = "crates/sutra-hitl" }
sutra-rse = { path = "crates/sutra-rse" }
mgtg = { path = "crates/mgtg" }
sutra-repair-refactoring = { path = "crates/sutra-repair-refactoring" }
sutra-repair-coupling = { path = "crates/sutra-repair-coupling" }
sutra-repair-performance = { path = "crates/sutra-repair-performance" }
sutra-repair-testing-gap = { path = "crates/sutra-repair-testing-gap" }
sutra-repair-debt-roi = { path = "crates/sutra-repair-debt-roi" }
