[package]
name = "sutra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sutra-schema.workspace = true
sutra-common.workspace = true
sutra-mgtg.workspace = true
sutra-dependency.workspace = true
sutra-process.workspace = true
sutra-orchestrator.workspace = true
sutra-ci.workspace = true
sutra-ml.workspace = true
sutra-llm.workspace = true
sutra-hitl.workspace = true
sutra-rse.workspace = true
sutra-repair-refactoring.workspace = true
sutra-repair-coupling.workspace = true
sutra-repair-performance.workspace = true
sutra-repair-testing-gap.workspace = true
sutra-repair-debt-roi.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
