[package]
name = "sutra-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true, features = ["parse"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
sutra-schema.workspace = true
walkdir.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
