[package]
name = "sutra-dependency"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sutra-schema.workspace = true
sutra-common.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
petgraph.workspace = true
rusqlite.workspace = true
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
proptest.workspace = true
