[package]
name = "sutra-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sutra-schema.workspace = true
sutra-common.workspace = true
sutra-orchestrator.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
