[package]
name = "sutra-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tower = "0.5"
http-body-util = "0.1"
sutra-schema.workspace = true
sutra-common.workspace = true
sutra-mgtg.workspace = true
sutra-dependency.workspace = true
sutra-process.workspace = true
sutra-rse.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
