[package]
name = "sutra-process"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sutra-schema.workspace = true
sutra-common.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
rusqlite.workspace = true
regex.workspace = true
git2.workspace = true
csv.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
proptest.workspace = true
