[package]
name = "sutra-repair-coupling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Repair Engine 2: detects architectural coupling and proposes restructuring with quantified throughput/latency impact"

[dependencies]
sutra-schema.workspace = true
sutra-common.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
regex.workspace = true
