[package]
name = "sutra-rse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime Survivability Engine — predicts production behavior before execution"

[dependencies]
sutra-schema.workspace = true
sutra-common.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
regex.workspace = true
