[package]
name = "sutra-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
toml.workspace = true
proptest.workspace = true
serde_yaml.workspace = true
